force-app/main/default/objects/CA_Imovel__c/CA_Imovel__c.object-meta.xml
<CustomObject>
    <label>Imóvel</label>
    <nameField>
        <label>Imóvel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imóveis</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>