force-app/main/default/objects/CA_Imovel__c/fields/CA_Area__c.field-meta.xml
<CustomField>
    <fullName>CA_Area__c</fullName>
    <label>Área</label>
    <length>255</length>
    <type>Text</type>
</CustomField>