force-app/main/default/objects/CA_Imovel__c/fields/CA_Caso__c.field-meta.xml
<CustomField>
    <fullName>CA_Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Imoveis</relationshipName>
    <type>Lookup</type>
</CustomField>