force-app/main/default/objects/CA_Imovel__c/fields/CA_CategoriaProduto__c.field-meta.xml
<CustomField>
    <fullName>CA_CategoriaProduto__c</fullName>
    <label>Categoria do Produto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auxiplus</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>