force-app/main/default/objects/CA_Imovel__c/fields/CA_CodigoImovel__c.field-meta.xml
<CustomField>
    <fullName>CA_CodigoImovel__c</fullName>
    <label>Código do Imóvel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>