force-app/main/default/objects/CA_Imovel__c/fields/CA_Complemento__c.field-meta.xml
<CustomField>
    <fullName>CA_Complemento__c</fullName>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>