force-app/main/default/objects/CA_Imovel__c/fields/CA_ConcessionariaAgua__c.field-meta.xml
<CustomField>
    <fullName>CA_ConcessionariaAgua__c</fullName>
    <label>Concessionária de Água</label>
    <length>255</length>
    <type>Text</type>
</CustomField>