force-app/main/default/objects/CA_Imovel__c/fields/CA_Condominios__c.field-meta.xml
<CustomField>
    <fullName>CA_Condominios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condomínio</label>
    <referenceTo>CA_Condominio__c</referenceTo>
    <relationshipName>Imoveis1</relationshipName>
    <type>Lookup</type>
</CustomField>