force-app/main/default/objects/CA_Imovel__c/fields/CA_Endereco__c.field-meta.xml
<CustomField>
    <fullName>CA_Endereco__c</fullName>
    <label>Endereço</label>
    <type>Address</type>
</CustomField>