force-app/main/default/objects/CA_Imovel__c/fields/CA_InquilinoAtual__c.field-meta.xml
<CustomField>
    <fullName>CA_InquilinoAtual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquilino Principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Imóveis (Inquilino Atual)</relationshipLabel>
    <relationshipName>ImoveisInquilinos</relationshipName>
    <type>Lookup</type>
</CustomField>