force-app/main/default/objects/CA_Imovel__c/fields/CA_InscricaoContaAgua__c.field-meta.xml
<CustomField>
    <fullName>CA_InscricaoContaAgua__c</fullName>
    <label>Inscrição da Conta de Agua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>