force-app/main/default/objects/CA_Imovel__c/fields/CA_InscricaoIPTU__c.field-meta.xml
<CustomField>
    <fullName>CA_InscricaoIPTU__c</fullName>
    <label>Inscrição do IPTU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>