force-app/main/default/objects/CA_Imovel__c/fields/CA_InscricaoIPTUBox__c.field-meta.xml
<CustomField>
    <fullName>CA_InscricaoIPTUBox__c</fullName>
    <label>Inscrição IPTU Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>