force-app/main/default/objects/CA_Imovel__c/fields/CA_Metragem__c.field-meta.xml
<CustomField>
    <fullName>CA_Metragem__c</fullName>
    <label>Metragem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>