force-app/main/default/objects/CA_Imovel__c/fields/CA_Mobiliado__c.field-meta.xml
<CustomField>
    <fullName>CA_Mobiliado__c</fullName>
    <label>Mobiliado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>