force-app/main/default/objects/CA_Imovel__c/fields/CA_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CA_Negocio__c</fullName>
    <label>Negócio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vendas</fullName>
            </value>
            <value>
                <fullName>Aluguel</fullName>
            </value>
            <value>
                <fullName>Condomínios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>