force-app/main/default/objects/CA_Imovel__c/fields/CA_NumeroEndereco__c.field-meta.xml
<CustomField>
    <fullName>CA_NumeroEndereco__c</fullName>
    <label>Número de endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>