force-app/main/default/objects/CA_Imovel__c/fields/CA_ProprietarioImovel__c.field-meta.xml
<CustomField>
    <fullName>CA_ProprietarioImovel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietário Principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Imóveis (Proprietário Imóvel (Ajustado))</relationshipLabel>
    <relationshipName>Imoveis</relationshipName>
    <type>Lookup</type>
</CustomField>