force-app/main/default/objects/CA_Imovel__c/fields/CA_ResponsavelPagamentoIPTU__c.field-meta.xml
<CustomField>
    <fullName>CA_ResponsavelPagamentoIPTU__c</fullName>
    <label>Responsável Pagamento IPTU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem controle</fullName>
            </value>
            <value>
                <fullName>Proprietário paga</fullName>
            </value>
            <value>
                <fullName>Imobiliária paga</fullName>
            </value>
            <value>
                <fullName>Locatário paga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>