force-app/main/default/objects/CA_Imovel__c/fields/CA_SituacaoImovel__c.field-meta.xml
<CustomField>
    <fullName>CA_SituacaoImovel__c</fullName>
    <label>Situação do Imóvel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ocupado</fullName>
            </value>
            <value>
                <fullName>Em Oferta</fullName>
            </value>
            <value>
                <fullName>Desocupado</fullName>
            </value>
            <value>
                <fullName>Retirado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>