force-app/main/default/objects/CA_Imovel__c/fields/CA_Tipologia__c.field-meta.xml
<CustomField>
    <fullName>CA_Tipologia__c</fullName>
    <label>Tipologia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>