force-app/main/default/objects/CA_Imovel__c/fields/CA_TipoNegocio__c.field-meta.xml
<CustomField>
    <fullName>CA_TipoNegocio__c</fullName>
    <label>Tipo de Negócio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>