force-app/main/default/objects/CA_Imovel__c/fields/Gestor_de_Conta_Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Gestor_de_Conta_Proprietario__c</fullName>
    <formula>CA_ProprietarioImovel__r.CA_GestorContaAlugueis__r.FirstName   &amp; &quot; &quot; &amp;   CA_ProprietarioImovel__r.CA_GestorContaAlugueis__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestor de Conta (Proprietário)</label>
    <type>Text</type>
</CustomField>