force-app/main/default/objects/CA_Imovel__c/fields/Numero_de_Protocolo_do_Caso__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Protocolo_do_Caso__c</fullName>
    <description>Exibe o número do protocolo atrelado ao imóvel através da relação CA_Caso__r.Numero_de_Protocolo__c</description>
    <formula>ProtocoloLookUp__r.IdProtocolo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Exibe o número do protocolo atrelado a este imóvel</inlineHelpText>
    <label>Numero de Protocolo do Caso</label>
    <type>Text</type>
</CustomField>