force-app/main/default/objects/CA_Imovel__c/fields/Perfil_Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Proprietario__c</fullName>
    <formula>TEXT(CA_ProprietarioImovel__r.CA_PerfilAlugueis__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil (Proprietário)</label>
    <type>Text</type>
</CustomField>