force-app/main/default/objects/CA_Imovel__c/fields/ProtocoloLookUp__c.field-meta.xml
<CustomField>
    <fullName>ProtocoloLookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProtocoloLookUp</label>
    <referenceTo>Protocolo__c</referenceTo>
    <relationshipLabel>Imóveis</relationshipLabel>
    <relationshipName>Im_veis</relationshipName>
    <type>Lookup</type>
</CustomField>