force-app/main/default/objects/CA_Imovel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CA_SituacaoImovel__c</columns>
    <columns>CA_Negocio__c</columns>
    <columns>CA_TipoNegocio__c</columns>
    <columns>CA_Endereco__StateCode__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>